added user design

--- a/client/src/scss/abstract/_variables.scss
+++ b/client/src/scss/abstract/_variables.scss
@@ -1,2 +1,5 @@
 $primary-color: #1e266d;
 $secondary-color: #ff2e69;
+$COLOR_SCROLLBAR_TRACK: #f1f1f1;
+$COLOR_SCROLLBAR_THUMB: #8c97bd;
+$COLOR_SCROLLBAR_THUMB_HOVER: #555;
