--- a/client/src/scss/style.scss
+++ b/client/src/scss/style.scss
@@ -13,6 +13,10 @@
 // Pages
 @import 'pages/home';
 
+// Components
+@import 'components/users';
+@import 'components/scrollbar';
+
 html {
   min-height: 100vh;
   display: flex;
