Improved the designed and updated swagger

--- a/client/src/scss/abstract/_variables.scss
+++ b/client/src/scss/abstract/_variables.scss
@@ -3,3 +3,8 @@ $secondary-color: #ff2e69;
 $COLOR_SCROLLBAR_TRACK: #f1f1f1;
 $COLOR_SCROLLBAR_THUMB: #8c97bd;
 $COLOR_SCROLLBAR_THUMB_HOVER: #555;
+$COLOR_DELETE_ICON_TEXT: #fff;
+$COLOR_DELETE_ICON_BACKGROUND: red;
+$COLOR_BORDER: #000;
+$COLOR_USERBOX_BACKGROUND_ACTIVE: #eee;
+$COLOR_USER_HOBBIES_BACKGROUND: #acacac;
