--- a/client/src/scss/components/_hobbies.scss
+++ b/client/src/scss/components/_hobbies.scss
@@ -1,18 +1,23 @@
 .hobbiesWrapper {
   height: 100%;
+  display: flex;
+  flex-direction: column;
 
   .hobbiesForm {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
 
-    input[type=text] {
+    & > * { flex: 1 1 auto; }
+
+    input[type=text], input[type=number] {
       width: 100px;
       height: 25px;
     }
 
-    input[type=submit] {
+    input[type=submit], select {
       height: 30px;
     }
   }
@@ -27,13 +32,30 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      border: 1px solid #000;
-      text-align: center;
+      align-items: center;
+      border: 1px solid $COLOR_BORDER;
       font-family: 'Ubuntu Regular';
       padding: 5px;
-  
-      &.active {
-        background-color: #eee;
+
+      .hobbyName {
+        margin-left: auto;
+      }
+
+      .hobbyYear {
+        margin-left: auto;
+      }
+
+      .deleteIcon {
+        margin-left: 20px;
+        color: $COLOR_DELETE_ICON_TEXT;
+        background-color: $COLOR_DELETE_ICON_BACKGROUND;
+        width: 20px;
+        height: 20px;
+        border-radius: 1px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
       }
       
       &:not(:last-child) {
