--- a/client/src/scss/components/_users.scss
+++ b/client/src/scss/components/_users.scss
@@ -1,11 +1,16 @@
 .usersWrapper {
   height: 100%;
+  display: flex;
+  flex-direction: column;
 
   .usersForm {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+
+    & > * { flex: 1 1 auto; }
 
     input[type=text] {
       width: 100px;
@@ -13,6 +18,7 @@
     }
 
     input[type=submit] {
+      width: 100px;
       height: 30px;
     }
   }
@@ -25,14 +31,14 @@
   }
 
   .userBox {
-    border: 1px solid #000;
+    border: 1px solid $COLOR_BORDER;
     text-align: center;
     font-family: 'Ubuntu Regular';
     padding: 5px;
     cursor: pointer;
 
     &.active {
-      background-color: #eee;
+      background-color: $COLOR_USERBOX_BACKGROUND_ACTIVE;
     }
 
     
